# edge-ai-libraries

./: .gitmodules  README.md
microservices/alert-service/: .env.example  .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
microservices/alert-service/config/: config.yaml
microservices/alert-service/docker/: Dockerfile  docker-compose.yml
microservices/alert-service/docs/user-guide/: api-reference.md  get-started.md  how-it-works.md  index.md  release-notes.md  troubleshooting.md
microservices/alert-service/src/: main.py  worker.py
microservices/alert-service/src/api/: router.py
microservices/alert-service/src/core/: config.py  models.py  settings.py
microservices/alert-service/src/dedup/: engine.py  store.py  strategy.py
microservices/alert-service/src/delivery/: base.py  log.py  mqtt.py  registry.py  webhook.py  websocket.py  ws_manager.py
microservices/alert-service/tests/: conftest.py  test_api.py  test_config.py  test_dedup.py  test_delivery.py  test_main.py  test_models.py  test_worker.py  ws_subscriber.py
microservices/document-ingestion/pgvector/: pyproject.toml
microservices/inference-router/: .env.example  Dockerfile  README.md  config.example.yaml  pyproject.toml  pytest.ini
microservices/inference-router/deployment/docker/: docker-compose.yml
microservices/inference-router/docs/user-guide/: api-reference.md  get-started.md  index.md  release-notes.md
microservices/inference-router/scripts/: build_docker.sh  deploy_docker.sh
microservices/inference-router/src/: __init__.py  exceptions.py  main.py  models.py
microservices/inference-router/src/api/: __init__.py  app.py  concurrency.py  logging_setup.py
microservices/inference-router/src/config/: __init__.py  base.py  loader.py
microservices/inference-router/src/observability/: __init__.py  events.py  telemetry.py
microservices/inference-router/src/plugins/: __init__.py  base.py  manager.py
microservices/inference-router/src/providers/: __init__.py  base.py  litellm_provider.py
microservices/inference-router/src/router/: __init__.py  logging_utils.py  orchestrator.py
microservices/inference-router/src/rsd/: __init__.py  decision.py  policy.py  policy.yaml  rule.py  strategy.py  strategy.yaml
microservices/inference-router/tests/: __init__.py  conftest.py
microservices/inference-router/tests/integration/: __init__.py  test_chat_endpoint.py
microservices/inference-router/tests/unit/: __init__.py  test_client.py  test_decision_policy.py  test_gateway_request_types.py  test_plugins.py  test_router_gateway.py  test_strategy_executor.py
microservices/metrics-manager/: .env.example  .gitattributes  .gitignore  Dockerfile  Makefile  README.md  compose.yaml  entrypoint.sh  get-started.md  pyproject.toml  supervisord.conf  telegraf.conf
microservices/metrics-manager/app/: __init__.py  logging_config.py  main.py  metrics.py  models.py  rate_limit.py  responses.py  routes.py  settings.py  sse.py  store.py
microservices/metrics-manager/docs/user-guide/: api-reference.md  get-started.md  how-it-works.md  index.md  (+2 more)
microservices/metrics-manager/scripts/: npu_monitor_tool.py  npu_reader.py  qmassa_reader.py  read_cpu_freq.sh
microservices/metrics-manager/telegraf.d/: .gitkeep
microservices/metrics-manager/tests/: __init__.py  conftest.py  test_env_example.py  test_helm_chart.py  test_logging_config.py  test_main.py  test_metrics.py  test_models.py  test_npu_monitor_tool.py  test_npu_reader.py  test_qmassa_reader.py  test_rate_limit.py  test_routes.py  test_settings.py  test_sse.py  test_store.py  test_telegraf_integration.py
microservices/model-download/: README.md  pyproject.toml
microservices/model-download/chart/: Chart.yaml  values.yaml
microservices/model-download/docker/: Dockerfile  compose.yaml  entrypoint.sh
microservices/model-download/scripts/: 3d_pose_model_convert.py  get_model.sh
microservices/multimodal-embedding-serving/: pyproject.toml  setup.sh
microservices/multimodal-embedding-serving/docker/: Dockerfile  compose.yaml
microservices/multimodal-embedding-serving/examples/: README.md  sdk_examples.py  server_examples.py
microservices/multimodal-embedding-serving/scripts/: install_ubuntu_gpu_drivers.sh
microservices/multimodal-embedding-serving/src/: app.py  wrapper.py
microservices/multimodal-embedding-serving/tests/: test_path_security.py
microservices/vector-retriever/vector-retriever/: .gitignore  README.md  build.sh  pyproject.toml  setup.sh
microservices/visual-data-preparation-for-retrieval/vdms/: .gitignore  build.sh  pyproject.toml  setup-with-embedding.sh  setup.sh
microservices/vlm-openvino-serving/: pyproject.toml  setup.sh
microservices/vlm-openvino-serving/docker/: Dockerfile  compose.yaml
microservices/vlm-openvino-serving/scripts/: compress_model.sh
microservices/vlm-openvino-serving/src/: app.py
microservices/vlm-openvino-serving/tests/: test_app.py
sample-applications/chat-question-and-answer/: pyproject.toml
sample-applications/chat-question-and-answer-core/: .gitignore  Makefile  pyproject.toml
sample-applications/chat-question-and-answer-core/app/: openvino_backend.py  runtime_validators.py  server.py
sample-applications/chat-question-and-answer-core/chart/: Chart.yaml  values.yaml
sample-applications/chat-question-and-answer-core/docker/: Dockerfile  Dockerfile.ollama  compose.yaml
sample-applications/chat-question-and-answer-core/drivers/: install_gpu_drivers.sh
sample-applications/chat-question-and-answer-core/scripts/: setup_env.sh
sample-applications/chat-question-and-answer-core/tests/: README.md  test_server.py
sample-applications/chat-question-and-answer-core/ui/: Dockerfile  package-lock.json  package.json
sample-applications/chat-question-and-answer/app/: chain.py
sample-applications/chat-question-and-answer/chart/: Chart.yaml
sample-applications/video-search-and-summarization/mcp/: .dockerignore  .env.example  Dockerfile  README.md  compose.yaml  pyproject.toml  search.json
sample-applications/video-search-and-summarization/search-ms/: pyproject.toml  server.py
(+916 files in other folders)
