[tool.poetry]
name = "alert-service"
version = "2026.1.0"
description = "Config-driven async Alert Service with deduplication, routing, and pluggable delivery"
authors = ["Intel Corporation"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.10,<3.14"
fastapi = "^0.115.0"
uvicorn = "^0.34.0"
pydantic = "^2.10.0"
pydantic-settings = "^2.7.0"
pyyaml = "^6.0"
aiomqtt = "^2.3.0"
httpx = "^0.28.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.0"
pytest-asyncio = "^0.25.0"
pytest-cov = "^6.0.0"
black = "^25.1.0"
isort = "^5.13.0"
respx = "^0.22.0"

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.isort]
profile = "black"
line_length = 88

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--spec"
spec_test_format = "{docstring_summary}"
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
]

[tool.coverage.run]
source = ["src"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
