# Copyright (C) 2025 Intel Corporation
# SPDX-License-Identifier: Apache-2.0

[tool.poetry]
name = "multimodal-embedding-serving"
version = "2.0.0"
description = "The MultiModal Embedding serving is designed to generate embeddings for text, image URLs, base64 encoded images, video URLs, and base64 encoded videos. It leverages the CLIP (Contrastive Language-Image Pretraining) model to create these embeddings."
authors = []
readme = "README.md"
packages = [{include = "src", to = "multimodal_embedding_serving"},{include = "__init__.py", to = "multimodal_embedding_serving"}]

[tool.poetry.dependencies]
python = ">=3.11,<3.14"
fastapi = ">=0.136.3,<1.0.0"
uvicorn = ">=0.48.0,<1.0.0"
gunicorn = "^26.0.0"
pydantic = "^2.13.4"
pydantic-settings = "^2.14.1"
opencv-python-headless = ">=4.13.0.92,<6.0.0.0"
einops = ">=0.8.2,<1.0.0"
av = "^18.0.0"
transformers = ">=4.57.6,<6.0.0"
openvino = "^2026.2.0"
optimum-intel = { git = "https://github.com/huggingface/optimum-intel.git", rev = "70f8120bb4a3cb57c2ad954d8cdf057c234c01b8" }
httpx = ">=0.28.1,<1.0.0"
timm = "^1.0.27"
cn-clip = "1.6.0"
open-clip-torch = "^3.3.0"
nncf = "^3.1.0"
urllib3 = "^2.7.0"
protobuf = ">=5.29.6,<8.0.0"
fonttools = "^4.63.0"
filelock = "^3.29.0"
pillow = "^12.2.0"
wheel = ">=0.47.0,<1.0.0"
setuptools = "^81.0.0"
numpy = { version = ">=2.4.4", source = "pytorch-cpu" }
torch = { version = "==2.12.0+cpu", source = "pytorch-cpu" }
torchvision = { version = "==0.27.0+cpu", source = "pytorch-cpu" }

[[tool.poetry.source]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"