# Copyright (C) 2025 Intel Corporation
# SPDX-License-Identifier: Apache-2.0

[tool.poetry]
name = "vlm-openvino-serving"
version = "0.1.0"
description = "FastAPI server wrapping OpenVINO runtime to serve `/chat/completion` endpoint to consume multimodal image input/video input and serve inference with VLM models."
authors = []
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11,<3.14"
torch = { version = "==2.12.0+cpu", source = "pytorch-cpu" }
torchvision = { version = "==0.27.0+cpu", source = "pytorch-cpu" }
fastapi = "^0.136.1"
fastapi-utils = "^0.8.0"
typing-inspect = "^0.9.0"
uvicorn = "^0.47.0"
gunicorn = "^26.0.0"
pydantic = "^2.13.4"
pydantic-settings = "^2.14.1"
aiohttp = "^3.13.5"
nncf = "^3.1.0"
transformers = "^4.57.6"
numpy = "^2.4.6"
pillow = "^12.2.0"
openvino = "^2026.1.0"
openvino-tokenizers = "^2026.1.0.0"
openvino-genai = "^2026.1.0.0"
optimum-intel = "^1.27.0"
optimum = "^2.1.0"
qwen_vl_utils = "^0.0.14"
num2words = "^0.5.14"
urllib3 = "^2.7.0"
protobuf = "^7.34.1"
filelock = "^3.29.0"
setuptools = "^81.0.0"
wheel = "^0.47.0"

[[tool.poetry.source]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"

[tool.poetry.group.test.dependencies]
pytest = "^9.0.3"
pytest-mock = "^3.15.1"
coverage = "^7.14.0"
pytest-asyncio = "^1.3.0"
httpx = "^0.28.1"

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "module"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

