# Copyright (C) 2025 Intel Corporation
# SPDX-License-Identifier: Apache-2.0

[tool.poetry]
name = "vlm-openvino-serving"
version = "1.3.2"
description = "FastAPI server wrapping OpenVINO runtime to serve `/chat/completion` endpoint to consume multimodal image input/video input and serve inference with VLM models."
authors = []
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11,<3.14"
torch = { version = "==2.12.0+cpu", source = "pytorch-cpu" }
torchvision = { version = "==0.27.0+cpu", source = "pytorch-cpu" }
fastapi = ">=0.136.3,<1.0.0"
fastapi-utils = ">=0.8.0,<1.0.0"
typing-inspect = ">=0.9.0,<1.0.0"
uvicorn = ">=0.48.0,<1.0.0"
gunicorn = "^26.0.0"
pydantic = "^2.13.4"
pydantic-settings = "^2.14.1"
aiohttp = "^3.13.5"
nncf = "^3.1.0"
# locked transformer to support NPU as openivno docs suggest to use 4.51.3 "https://docs.openvino.ai/2026/openvino-workflow-generative/inference-with-genai/inference-with-genai-on-npu.html"
transformers = "4.51.3"
numpy = "^2.4.6"
pillow = "^12.2.0"
openvino = "^2026.2.0"
openvino-tokenizers = "^2026.2.0.0"
openvino-genai = "^2026.2.0.0"
optimum-intel = { git = "https://github.com/huggingface/optimum-intel.git", rev = "70f8120bb4a3cb57c2ad954d8cdf057c234c01b8" }
qwen_vl_utils = ">=0.0.14,<1.0.0"
num2words = ">=0.5.14,<1.0.0"
urllib3 = "^2.7.0"
protobuf = "^7.35.0"
filelock = "^3.29.0"
setuptools = "^81.0.0"
wheel = ">=0.47.0,<1.0.0"
# adding datasets to support data-aware model conversion
datasets = "^5.0.0"
# adding einops and timm to support InternVL model conversion
einops = ">=0.8.2,<1.0.0"
timm = "^1.0.27"
# adding peft, backoff for phi-4-multimodal model conversion
peft = ">=0.19.1,<1.0.0"
backoff = "^2.2.1"

[[tool.poetry.source]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"

[tool.poetry.group.test.dependencies]
pytest = "^9.0.3"
pytest-mock = "^3.15.1"
coverage = "^7.14.1"
pytest-asyncio = "^1.4.0"
httpx = ">=0.28.1,<1.0.0"

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "module"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
