[tool.poetry]
name = "my-app"
version = "0.1.0"
description = ""
authors = []
readme = "README.md"
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
uvicorn = "^0.34.2"
langchain = "^1.3.1"
langchain-community = "^0.3.31"
langchain_postgres = "^0.0.17"
langchain_openai = "^0.3.5"
psycopg = { version = "3.2.3", extras = ["c"] }
asyncpg = "^0.30.0"
fastapi = "0.121.3"
opentelemetry-sdk = "1.39.1"
opentelemetry-instrumentation-fastapi = "0.60b1"
openlit = "1.42.0"
httpx = "0.27.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
pytest-mock = "^3.14.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
