[tool.poetry]
name = "dataprep-pgvector"
version = "0.1.0"
description = "A tool for loading, parsing, and generating embeddings for PDF, DOCX, and TXT files, storing these embeddings in PGVector (Vector Store)"
authors = []
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
av = "13.1.0"
beautifulsoup4 = "4.12.3"
boto3 = "1.40.19"
docarray = {extras = ["full"], version = "0.41.0"}
docx2txt = "0.8"
fastapi = "0.121.3"
gunicorn = "^23.0.0"
huggingface_hub = "0.33.0"
html2text = "2024.2.26"
langchain-core = "1.3.3"
langchain-community = "^0.3.9"
langchain-text-splitters = "1.1.2"
langchain_postgres = "^0.0.16"
langchain_openai = "^1.2.0"
markdown = "3.10.2"
psycopg = {extras = ["pool", "binary"], version = "3.2.3"}
pymupdf = "1.24.13"
python-docx = "1.2.0"
python-multipart = "0.0.27"
pydantic = "^2.9.2"
pydantic-settings = "^2.6.1"
shortuuid = "1.0.13"
structlog = "25.1.0"
pdfplumber = "0.11.9"
transformers = "4.53.3"
uvicorn = ">=0.21.0,<0.23.0"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.3"
pytest-mock = "^3.15.0"
coverage = "^7.13.0"
pytest-asyncio = "^1.3.0"
httpx = "^0.27.2"

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "module"

[build-system]
requires = ["poetry-core>=1.8.3"]
build-backend = "poetry.core.masonry.api"
