
[tool.poetry]
name = "video-search"
version = "0.1.0"
description = "Video Search Microservice"
authors = []
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11,<3.14"
fastapi = "^0.136.3"
pydantic-settings = "^2.14.1"
uvicorn = "^0.48.0"
gunicorn = "^26.0.0"
langchain-core = "^1.4.0"
langchain-vdms = "^0.2.0"
numpy = { version = ">=2.4.4", source = "pytorch-cpu" }
langsmith = "^0.8.8"
watchdog = "6.0.0"
requests = "^2.34.2"
dateparser = "^1.4.0"
tzlocal = "^5.3.1"
word2number = "^1.1"
urllib3 = "^2.7.0"
aiohttp = "^3.14.0"
marshmallow = "^4.3.0"

[[tool.poetry.source]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"